--- a/index.html
+++ b/index.html
@@ -1,10 +1,146 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>Welcome to My GitHub Page!</title>
-  </head>
-  <body>
-    <h1>Hello, world!</h1>
-    <p>This is my simple GitHub Pages site.</p>
-  </body>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Author Portfolio</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="icon" type="image/png" href="https://via.placeholder.com/32">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+  <style>
+    body {
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    }
+    header {
+      background-color: #2e4659;
+      color: white;
+      padding: 60px 0;
+    }
+    header h1 span {
+      color: #d2b48c;
+    }
+    .btn-custom {
+      background-color: #d2b48c;
+      color: #2e4659;
+    }
+    .btn-custom:hover {
+      background-color: #c0a070;
+      color: white;
+    }
+    .about-section {
+      padding: 60px 0;
+      background-color: #f9f9f9;
+    }
+    .work-section {
+      padding: 60px 0;
+      background-color: #f1f3f5;
+    }
+    footer {
+      background-color: #2e4659;
+      color: white;
+      text-align: center;
+      padding: 20px 0;
+    }
+    footer .social-icons a {
+      color: white;
+      margin: 0 10px;
+      font-size: 1.5rem;
+      transition: color 0.3s;
+    }
+    footer .social-icons a:hover {
+      color: #d2b48c;
+    }
+  </style>
+</head>
+<body>
+  <!-- Header -->
+  <header class="text-center">
+    <div class="container">
+      <img src="https://via.placeholder.com/200" alt="Profile" class="rounded-circle mb-4">
+      <h1>Hello, I'm <span>Your Name</span></h1>
+      <p class="lead">Author, Writer & Thought Leader</p>
+      <div class="d-flex justify-content-center gap-3 mt-4">
+        <a href="#" class="btn btn-custom">View My Books</a>
+        <a href="#" class="btn btn-outline-light">Read Articles</a>
+      </div>
+    </div>
+  </header>
+
+  <!-- About -->
+  <section class="about-section text-center">
+    <div class="container">
+      <h2 class="mb-4">About Me</h2>
+      <p class="mx-auto" style="max-width: 800px;">
+        I'm a passionate writer and author dedicated to exploring the complexities of human experience through storytelling. With several published works and countless articles, I strive to connect with readers on a deep, meaningful level.
+      </p>
+      <p class="mx-auto" style="max-width: 800px;">
+        My writing spans various genres and topics, from thought-provoking fiction to insightful non-fiction. I believe in the power of words to inspire, challenge, and transform perspectives.
+      </p>
+      <p class="mx-auto" style="max-width: 800px;">
+        When I'm not writing, you can find me reading voraciously, traveling to gather new experiences, or engaging with the vibrant literary community that continues to inspire my work.
+      </p>
+    </div>
+  </section>
+
+  <!-- Work -->
+  <section class="work-section text-center">
+    <div class="container">
+      <h2 class="mb-4">Explore My Work</h2>
+      <p class="mb-5">Discover my books and articles across different platforms</p>
+      <div class="row g-4">
+        <div class="col-md-4">
+          <div class="card h-100 shadow-sm">
+            <div class="card-body">
+              <div class="mb-3">
+                <img src="https://via.placeholder.com/60" alt="Books">
+              </div>
+              <h5 class="card-title">My Books</h5>
+              <p class="card-text">Explore my published works available on Amazon</p>
+              <a href="#" class="btn btn-outline-dark">Visit Amazon</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="card h-100 shadow-sm">
+            <div class="card-body">
+              <div class="mb-3">
+                <img src="https://via.placeholder.com/60" alt="Medium">
+              </div>
+              <h5 class="card-title">Medium Articles</h5>
+              <p class="card-text">Read my latest thoughts and insights on Medium</p>
+              <a href="#" class="btn btn-custom">Read on Medium</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="card h-100 shadow-sm">
+            <div class="card-body">
+              <div class="mb-3">
+                <img src="https://via.placeholder.com/60" alt="RLMAD">
+              </div>
+              <h5 class="card-title">RLMAD.net</h5>
+              <p class="card-text">Discover specialized articles and content on RLMAD</p>
+              <a href="#" class="btn btn-outline-dark">Visit RLMAD</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Footer -->
+  <footer>
+    <div class="container">
+      <p>© 2024 Your Name. All rights reserved.</p>
+      <small>Thank you for visiting my corner of the internet.</small>
+      <div class="social-icons mt-3">
+        <a href="#" target="_blank"><i class="fab fa-twitter"></i></a>
+        <a href="#" target="_blank"><i class="fab fa-linkedin"></i></a>
+        <a href="#" target="_blank"><i class="fab fa-github"></i></a>
+      </div>
+    </div>
+  </footer>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+</body>
 </html>
