--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
     </div>
     <div class="container">
       <img src="https://via.placeholder.com/200" alt="Profile" class="rounded-circle mb-4">
-      <h1 id="header-title">Olá, eu sou <span>Seu Nome</span></h1>
-      <p class="lead" id="header-subtitle">Autor, Escritor & Pensador</p>
+      <h1 id="header-title">Olá, eu sou <span>Fábio Serrano</span></h1>
+      <p class="lead" id="header-subtitle">Autor, Escritor, Compositor & amante de tecnologia</p>
       <div class="d-flex justify-content-center gap-3 mt-4">
         <a href="#" id="btn-books" class="btn btn-custom">Ver meus livros</a>
         <a href="#" id="btn-articles" class="btn btn-outline-light">Ler artigos</a>
@@ -163,12 +163,12 @@
   <script>
     const translations = {
       pt: {
-        headerTitle: "Olá, eu sou <span>Seu Nome</span>",
-        headerSubtitle: "Autor, Escritor & Pensador",
+        headerTitle: "Olá, eu sou <span>Fábio Serrano/span>",
+        headerSubtitle: "Autor, Escritor, Compositor & amante de tecnologia",
         btnBooks: "Ver meus livros",
         btnArticles: "Ler artigos",
         aboutTitle: "Sobre mim",
-        aboutText1: "Sou um escritor apaixonado dedicado a explorar a complexidade da experiência humana através da narrativa. Com vários trabalhos publicados e inúmeros artigos, procuro conectar-me com os leitores de forma profunda e significativa.",
+        aboutText1: "Sou informata, professor universitário, gerente de desenvolvimento e, especialmente, um entusiasta das artes liberais. Com mais de 20 anos no mercado de tecnologia e vivendo o mundo corporativo intensamente (dentro e fora das empresas), já palestrou em mais de 10 países sobre inovação, gestão de pessoas e design thinking. Sou pai de um lindo casal de filhos que querem mudar o mundo. Vivo feliz em Portugal com a minha família."
         aboutText2: "A minha escrita abrange diversos géneros e temas, desde ficção envolvente até não-ficção inspiradora. Acredito no poder das palavras para inspirar, desafiar e transformar perspetivas.",
         aboutText3: "Quando não estou a escrever, pode encontrar-me a ler avidamente, a viajar para novas experiências ou a participar na vibrante comunidade literária que continua a inspirar o meu trabalho.",
         workTitle: "Explore o meu trabalho",
