--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
       <a href="#" id="lang-pt" class="active">PT</a> | <a href="#" id="lang-en">EN</a>
     </div>
     <div class="container">
-      <img src="https://via.placeholder.com/200" alt="Profile" class="rounded-circle mb-4">
+      <img src="/img/profile.jpg" alt="Profile" class="rounded-circle mb-4">
       <h1 id="header-title">Olá, eu sou <span>Fábio Serrano</span></h1>
       <p class="lead" id="header-subtitle">Autor, Escritor, Compositor & amante de tecnologia</p>
       <div class="d-flex justify-content-center gap-3 mt-4">
@@ -90,7 +90,7 @@
     <div class="container">
       <h2 class="mb-4" id="about-title">Sobre mim</h2>
       <p class="mx-auto" style="max-width: 800px;" id="about-text1">
-        Sou um escritor apaixonado dedicado a explorar a complexidade da experiência humana através da narrativa. Com vários trabalhos publicados e inúmeros artigos, procuro conectar-me com os leitores de forma profunda e significativa.
+        Sou informata, professor universitário, gerente de desenvolvimento e, especialmente, um entusiasta das artes liberais. Com mais de 20 anos no mercado de tecnologia e vivendo o mundo corporativo intensamente (dentro e fora das empresas), já palestrou em mais de 10 países sobre inovação, gestão de pessoas e design thinking. Sou pai de um lindo casal de filhos que querem mudar o mundo. Vivo feliz em Portugal com a minha família.
       </p>
       <p class="mx-auto" style="max-width: 800px;" id="about-text2">
         A minha escrita abrange diversos géneros e temas, desde ficção envolvente até não-ficção inspiradora. Acredito no poder das palavras para inspirar, desafiar e transformar perspetivas.
