--- a/index2.html
+++ b/index2.html
@@ -106,13 +106,16 @@
       color: #000;
     }
   </style>
+  <link rel="icon" type="image/svg+xml" href="/img/favicon.svg">
+  <link rel="alternate icon" href="/img/favicon.png">
 </head>
 <body>
 
   <!-- Navbar -->
   <nav class="navbar navbar-expand-lg sticky-top">
     <div class="container">
-      <a class="navbar-brand" href="#">LOGO</a>
+      <a class="navbar-brand" href="/">
+      <img src="/img/logo.svg" alt="Fábio Serrano" style="height:32px;"></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -184,7 +187,7 @@
 
   <!-- Footer -->
   <footer id="contact">
-    <p id="footer-text">© 2024 Fábio Serrano. Todos os direitos reservados.</p>
+    <p id="footer-text">© 2025 Fábio Serrano. Todos os direitos reservados.</p>
     <div class="social-icons">
       <a href="#"><i class="fab fa-twitter"></i></a>
       <a href="#"><i class="fab fa-linkedin"></i></a>
@@ -215,7 +218,7 @@
         card3Text: "Um espaço de reflexão maçónica, cultural e humana.",
         card4Title: "Spotify",
         card4Text: "Composições e playlists para transformar ideias em som.",
-        footerText: "© 2024 Fábio Serrano. Todos os direitos reservados."
+        footerText: "© 2025 Fábio Serrano. Todos os direitos reservados."
       },
       en: {
         menuAbout: "About Me",
@@ -237,7 +240,7 @@
         card3Text: "A space for Masonic, cultural, and human reflection.",
         card4Title: "Spotify",
         card4Text: "Compositions and playlists that turn ideas into sound.",
-        footerText: "© 2024 Fábio Serrano. All rights reserved."
+        footerText: "© 2025 Fábio Serrano. All rights reserved."
       }
     };
 
