--- a/index2.html
+++ b/index2.html
@@ -6,6 +6,7 @@
   <title>Fábio Serrano</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+  <link rel="icon" type="image/svg+xml" href="/img/favicon.svg">
   <style>
     body {
       font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
@@ -18,9 +19,8 @@
       background: #fff;
       border-bottom: 1px solid #eee;
     }
-    nav .navbar-brand {
-      font-weight: bold;
-      font-size: 1.2rem;
+    nav .navbar-brand img {
+      height: 32px;
     }
     nav .nav-link {
       color: #333;
@@ -106,8 +106,6 @@
       color: #000;
     }
   </style>
-  <link rel="icon" type="image/svg+xml" href="/img/favicon.svg">
-  <link rel="alternate icon" href="/img/favicon.png">
 </head>
 <body>
 
@@ -115,7 +113,8 @@
   <nav class="navbar navbar-expand-lg sticky-top">
     <div class="container">
       <a class="navbar-brand" href="/">
-      <img src="/img/logo.svg" alt="Fábio Serrano" style="height:32px;"></a>
+        <img src="/img/logo.svg" alt="Fábio Serrano">
+      </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -270,8 +269,8 @@
       document.getElementById("lang-en").classList.toggle("active", lang === "en");
     }
 
-    document.getElementById("lang-pt").addEventListener("click", () => setLanguage("pt"));
-    document.getElementById("lang-en").addEventListener("click", () => setLanguage("en"));
+    document.getElementById("lang-pt").addEventListener("click", (e) => { e.preventDefault(); setLanguage("pt"); });
+    document.getElementById("lang-en").addEventListener("click", (e) => { e.preventDefault(); setLanguage("en"); });
 
     setLanguage("pt");
   </script>
