--- a/index2.html
+++ b/index2.html
@@ -113,7 +113,7 @@
   <nav class="navbar navbar-expand-lg sticky-top">
     <div class="container">
       <a class="navbar-brand" href="/">
-        <img src="/img/logo.svg" alt="Fábio Serrano">
+        <img src="/img/logo.png" alt="Fábio Serrano">
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
         <span class="navbar-toggler-icon"></span>
