--- a/diario.html
+++ b/diario.html
@@ -8,15 +8,14 @@
     
     <style>
         /* Estilos fiéis a fabioserrano.eu */
-        body {
-            background-color: #111; /* Fundo escuro correto */
-            color: #ccc;
-            font-family: 'Consolas', 'Monaco', 'Courier New', Courier, monospace;
-            line-height: 1.7;
-            margin: 0;
-            padding: 40px 20px;
-            text-align: center; /* Todo o conteúdo centrado */
-        }
+body {
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
+    line-height: 1.6;
+    margin: 0;
+    padding: 0;
+    background: #f9f9f9;
+    color: #333;
+}
 
         /* Container virtual para limitar a largura do texto */
         .content {
@@ -115,8 +114,8 @@
             <p class="author">Uma Jornada Simbólica no Templo de Salomão<br>por Fábio Catarino Serrano</p>
         </header>
 
-        <a href="https://www.amazon.es/Di%C3%A1rio-Aprendiz-Jornada-Simb%C3%B3lica-Salom%C3%A3o/dp/B0D9W3CVY2/" target="_blank" rel="noopener noreferrer">
-            <img src="https://m.media-amazon.com/images/I/71i0k54sR-L._SY466_.jpg" alt="Capa do livro O Diário do Aprendiz" class="book-cover">
+        <a href="https://www.amazon.com.br/Di%C3%A1rio-Aprendiz-Jornada-Simb%C3%B3lica-Portuguese/dp/B0FKP5BD6Q target="_blank" rel="noopener noreferrer">
+            <img src="https://m.media-amazon.com/images/I/71m6I1hnJXL._SL1491_.jpg" alt="Capa do livro O Diário do Aprendiz" class="book-cover">
         </a>
 
         <a href="https://www.amazon.es/Di%C3%A1rio-Aprendiz-Jornada-Simb%C3%B3lica-Salom%C3%A3o/dp/B0D9W3CVY2/" target="_blank" rel="noopener noreferrer" class="cta-button">
