--- a/diario.html
+++ b/diario.html
@@ -14,7 +14,8 @@ body {
     margin: 0;
     padding: 0;
     background: #f9f9f9;
-    color: #333;
+    color: black;
+    
 }
 
         /* Container virtual para limitar a largura do texto */
@@ -43,7 +44,6 @@ body {
             max-width: 250px;
             width: 80%;
             height: auto;
-            border: 2px solid #555; /* Borda subtil */
             margin: 20px 0 40px 0;
         }
 
@@ -114,7 +114,7 @@ body {
             <p class="author">Uma Jornada Simbólica no Templo de Salomão<br>por Fábio Catarino Serrano</p>
         </header>
 
-        <a href="https://www.amazon.com.br/Di%C3%A1rio-Aprendiz-Jornada-Simb%C3%B3lica-Portuguese/dp/B0FKP5BD6Q target="_blank" rel="noopener noreferrer">
+        <a href="https://www.amazon.com.br/Di%C3%A1rio-Aprendiz-Jornada-Simb%C3%B3lica-Portuguese/dp/B0FKP5BD6Q" target="_blank" rel="noopener noreferrer">
             <img src="https://m.media-amazon.com/images/I/71m6I1hnJXL._SL1491_.jpg" alt="Capa do livro O Diário do Aprendiz" class="book-cover">
         </a>
 
