--- a/diario.html
+++ b/diario.html
@@ -5,8 +5,36 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>O Diário do Aprendiz - Fábio Catarino Serrano</title>
     <meta name="description" content="Acompanhe a extraordinária jornada de Uri, um jovem inquieto em busca de propósito, na construção do Templo de Salomão.">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <link rel="icon" type="image/svg+xml" href="/img/favicon.svg">
     
     <style>
+        /* Navbar */
+        nav {
+            background: #fff;
+            border-bottom: 1px solid #eee;
+        }
+        nav .navbar-brand img {
+            height: 32px;
+        }
+        nav .nav-link {
+            color: #333;
+            margin-right: 1rem;
+        }
+        nav .nav-link:hover {
+            text-decoration: underline;
+        }
+        nav .lang-switch a {
+            margin-left: 0.5rem;
+            text-decoration: none;
+            color: #333;
+        }
+        nav .lang-switch a.active {
+            font-weight: bold;
+            text-decoration: underline;
+        }
+        
         /* Estilos fiéis a fabioserrano.eu */
 body {
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
@@ -107,6 +135,28 @@ body {
 </head>
 <body>
 
+  <!-- Navbar -->
+  <nav class="navbar navbar-expand-lg sticky-top">
+    <div class="container">
+      <a class="navbar-brand" href="/">
+        <img src="/img/logo.png" alt="Fábio Serrano">
+      </a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item"><a class="nav-link" href="#about" id="menu-about">Sobre Mim</a></li>
+          <li class="nav-item"><a class="nav-link" href="#work" id="menu-work">Trabalho</a></li>
+          <li class="nav-item"><a class="nav-link" href="#contact" id="menu-contact">Contato</a></li>
+        </ul>
+        <div class="lang-switch">
+          <a href="#" id="lang-pt" class="active">PT</a> | <a href="#" id="lang-en">EN</a>
+        </div>
+      </div>
+    </div>
+  </nav>
+
     <div class="content">
 
         <header>
@@ -135,5 +185,36 @@ body {
 
     </div>
 
+  <!-- Scripts -->
+  <script>
+    const translations = {
+      pt: {
+        menuAbout: "Sobre Mim",
+        menuWork: "Trabalho",
+        menuContact: "Contato"
+      },
+      en: {
+        menuAbout: "About Me",
+        menuWork: "Work",
+        menuContact: "Contact"
+      }
+    };
+
+    function setLanguage(lang) {
+      document.getElementById("menu-about").innerText = translations[lang].menuAbout;
+      document.getElementById("menu-work").innerText = translations[lang].menuWork;
+      document.getElementById("menu-contact").innerText = translations[lang].menuContact;
+
+      document.getElementById("lang-pt").classList.toggle("active", lang === "pt");
+      document.getElementById("lang-en").classList.toggle("active", lang === "en");
+    }
+
+    document.getElementById("lang-pt").addEventListener("click", (e) => { e.preventDefault(); setLanguage("pt"); });
+    document.getElementById("lang-en").addEventListener("click", (e) => { e.preventDefault(); setLanguage("en"); });
+
+    setLanguage("pt");
+  </script>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
