--- a/diario.html
+++ b/diario.html
@@ -78,7 +78,7 @@ body {
         /* Descrição do Livro (resumo) */
         .description {
             text-align: left; /* Alinhado à esquerda para melhor leitura */
-            color: #ccc;
+            color: #111;
             font-size: 0.95em;
             margin-bottom: 40px;
         }
@@ -146,9 +146,9 @@ body {
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item"><a class="nav-link" href="#about" id="menu-about">Sobre Mim</a></li>
-          <li class="nav-item"><a class="nav-link" href="#work" id="menu-work">Trabalho</a></li>
-          <li class="nav-item"><a class="nav-link" href="#contact" id="menu-contact">Contato</a></li>
+          <li class="nav-item"><a class="nav-link" href="index.html#about" id="menu-about">Sobre Mim</a></li>
+          <li class="nav-item"><a class="nav-link" href="index.html#work" id="menu-work">Trabalho</a></li>
+          <li class="nav-item"><a class="nav-link" href="index.html#contact" id="menu-contact">Contato</a></li>
         </ul>
         <div class="lang-switch">
           <a href="#" id="lang-pt" class="active">PT</a> | <a href="#" id="lang-en">EN</a>
