--- a/diario.html
+++ b/diario.html
@@ -92,11 +92,12 @@ body {
             display: inline-block;
             background-color: #f39c12;
             color: #111;
-            padding: 14px 30px;
+            padding: 10px 20px;
             text-decoration: none;
-            font-size: 1.2em;
+            font-size: 1em;
             font-weight: bold;
             border-radius: 3px;
+            margin-top: 30px;
             transition: background-color 0.3s ease, transform 0.2s ease;
         }
 
