--- a/diario2.html
+++ b/diario2.html
@@ -292,7 +292,9 @@
         <nav class="nav">
             <div class="nav-content">
                 <div class="nav-logo">
-                    <img src="/img/logo.png" alt="Fábio Serrano">
+                    <a href="https://fabioserrano.eu" target="_blank">
+                        <img src="/img/logo.png" alt="Fábio Serrano">
+                    </a>
                 </div>
                 <ul class="nav-center">
                     <li><a href="/index2.html#about">Sobre Mim</a></li>
