--- a/index2.html
+++ b/index2.html
@@ -313,7 +313,9 @@
     <nav class="nav">
       <div class="nav-content">
         <div class="nav-logo">
-          <img src="/img/logo.png" alt="Fábio Serrano">
+          <a href="https://fabioserrano.eu" target="_blank">
+            <img src="/img/logo.png" alt="Fábio Serrano">
+          </a>
         </div>
         <ul class="nav-center">
           <li><a href="#about" id="menu-about">Sobre Mim</a></li>
@@ -391,9 +393,8 @@
     <footer id="contact" class="footer">
       <p class="footer-text" id="footer-text">© 2025 Fábio Serrano. Todos os direitos reservados.</p>
       <div class="social-icons">
-        <a href="#" aria-label="Twitter">𝕏</a>
-        <a href="#" aria-label="LinkedIn">in</a>
-        <a href="#" aria-label="GitHub">⚡</a>
+        <a href="https://x.com/fcatser" target="_blank" aria-label="Twitter">𝕏</a>
+        <a href="https://www.linkedin.com/in/fabioserrano/" target="_blank" aria-label="LinkedIn">in</a>
       </div>
     </footer>
   </div>
